@@ -204,6 +204,9 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     Prompted by Timo Juhani Lindfors <timo.lindfors@iki.fi>.
   * Print an actual error or warning message instead of assert()ing on
     readlink()/stat() size discrepancies. Closes: #639229
+  * Update alternative links only if they change. This allows for a
+    read-only file system and a writable database. Closes: #636700
+    Based on a patch by Salvatore Bonaccorso <carnil@debian.org>.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim). Closes: #620312
